@@ -22,7 +22,9 @@ documentation.
 Usage example::
 
     .. aafig::
+        :aspect: 60
         :scale: 150
+        :proportional:
         :textual:
 
         +-------+         +-----------+
@@ -36,7 +38,7 @@ requires = ['Sphinx>=0.6', 'aafigure>=0.3']
 setup(
     name='sphinxcontrib-aafig',
     version='0.3',
-    url='http://bitbucket.org/birkenfeld/sphinx-contrib',
+    url='http://packages.python.org/sphinxcontrib-aafig/',
     download_url='http://pypi.python.org/pypi/sphinxcontrib-aafig',
     license='BSD',
     author='Leandro Lucarella',
